sumo/tests/jtrrouter/errors/sinks/false_edge__straight_only_sinks_in_defs/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml --output=routes.rou.xml --turn-defaults=0,100,0,0 --continue-on-unbuild --turns=input_turns.turns.xml

